--- a/index.qmd
+++ b/index.qmd
@@ -7,5 +7,10 @@ This is a Quarto website.
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
 ```{r}
+library(rsconnect)
 1 + 1
+
+```
+
+```         
 ```
